kubernetes/graylog-svc.yml
# Copyright (c) 2016 Kazumasa Kohtaka. All rights reserved.
# This file is available under the MIT license.

apiVersion: v1
kind: Service
metadata:
  name: graylog
spec:
  selector:
    app: graylog
  ports:
  - name: web
    port: 9000
    targetPort: 9000
  - name: api
    port: 12900
    targetPort: 12900
