kubernetes/graylog-ingress.yml
# Copyright (c) 2016 Kazumasa Kohtaka. All rights reserved.
# This file is available under the MIT license.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graylog
spec:
  rules:
  - host: graylog.dev
    http:
      paths:
      - backend:
          serviceName: graylog
          servicePort: 9000
  - host: graylog-api.dev
    http:
      paths:
      - backend:
          serviceName: graylog
          servicePort: 12900
  - host: graylog-gelf.dev
    http:
      paths:
      - backend:
          serviceName: graylog
          servicePort: 12202
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
spec:
  selector:
    matchLabels:
      k8s-app: nginx-ingress-lb
  template:
    metadata:
      labels:
        name: nginx-ingress-lb
        k8s-app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: graylog-web-lb
        image: gcr.io/google_containers/nginx-ingress-controller:0.7
        ports:
        - containerPort: 80
          hostPort: 80
        args:
        - /nginx-ingress-controller
        - --default-backend-service=default/graylog
